# exercise-scivis

./: CMakeLists.txt
data/: volume.frag  volume.vert
doc/: Fensterchen CMake HowTo for Linux
framework/: CMakeLists.txt  cube.cpp  cube.hpp  fensterchen.hpp  transfer_function.cpp  transfer_function.hpp  turntable.hpp  utils.cpp  utils.hpp  volume_loader_raw.cpp  volume_loader_raw.hpp  window.cpp  window.hpp
framework/shader/: volume.frag
source/: example.cpp  my_volume_raycaster.cpp
source/shader/: volume.frag  volume.vert
