file(GLOB_RECURSE FRAMEWORK_SOURCE RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.cpp)
file(GLOB_RECURSE FRAMEWORK_INLINE RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.inl)
file(GLOB_RECURSE FRAMEWORK_HEADER RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.hpp, *.h)

source_group("Inline Files" FILES ${FRAMEWORK_INLINE})

include_directories(${CMAKE_CURRENT_SOURCE_DIR}/..)

add_library(${FRAMEWORK_NAME} STATIC glew.c
  ${FRAMEWORK_SOURCE}
  ${FRAMEWORK_INLINE}
  ${FRAMEWORK_HEADER})
